--- a/basic-weather/Scene/Home/Base.lproj/Main.storyboard
+++ b/basic-weather/Scene/Home/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="393" height="1000"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="sdj-Tn-M5S">
-                                                <rect key="frame" x="24" y="24" width="345" height="183"/>
+                                                <rect key="frame" x="24" y="24" width="345" height="202.33333333333334"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="edu-qX-eoi">
                                                         <rect key="frame" x="98.666666666666686" y="0.0" width="148" height="54"/>
@@ -50,7 +50,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="25C-zR-fDx">
-                                                        <rect key="frame" x="111" y="134" width="123" height="49"/>
+                                                        <rect key="frame" x="111" y="134" width="123" height="68.333333333333314"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Most Sunny" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4n2-YN-fnE">
                                                                 <rect key="frame" x="0.0" y="0.0" width="123" height="28.666666666666668"/>
@@ -58,8 +58,14 @@
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feel like: 30" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZMq-Bg-uOE" userLabel="FeelLike Label">
+                                                                <rect key="frame" x="18" y="28.666666666666657" width="87" height="19.333333333333329"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
                                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="4DN-BM-dYH">
-                                                                <rect key="frame" x="14" y="28.666666666666657" width="95" height="20.333333333333329"/>
+                                                                <rect key="frame" x="14" y="48" width="95" height="20.333333333333329"/>
                                                                 <subviews>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="H:40°" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AJN-MA-d5q">
                                                                         <rect key="frame" x="0.0" y="0.0" width="45.333333333333336" height="20.333333333333332"/>
@@ -80,7 +86,7 @@
                                                 </subviews>
                                             </stackView>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="QhE-Dy-2Vh">
-                                                <rect key="frame" x="24" y="223" width="345" height="128"/>
+                                                <rect key="frame" x="24" y="242.33333333333331" width="345" height="128"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="128" id="wvo-aj-YI9"/>
@@ -138,6 +144,7 @@
                     <connections>
                         <outlet property="conditionLabel" destination="4n2-YN-fnE" id="Oh2-tY-xDp"/>
                         <outlet property="currentTempLabel" destination="UNP-SK-V0B" id="0Zg-TS-Z3L"/>
+                        <outlet property="feelLikeLabel" destination="ZMq-Bg-uOE" id="yFp-sO-g4f"/>
                         <outlet property="highestTempLabel" destination="AJN-MA-d5q" id="0AM-Mq-rXI"/>
                         <outlet property="locationLabel" destination="x7I-sj-m8A" id="KeP-qb-FVB"/>
                         <outlet property="lowestTempLabel" destination="qcR-Ul-P9U" id="WVE-vo-MqT"/>
